
==== 1.1 beta 2: 2009-09-12 ====

2009-09-12  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* TextFieldCell.xib: increase font size.
	* misc: enhance French translation for settings bundle; add spaces at the end
	  of the string so that the value does not appear to be part of the label.

==== 1.1 beta 1: 2009-09-06 ====

2009-08-24  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* nl.lproj/: Added Dutch translation.
	* misc: Make the "Add subcategory" cell labels gray, it's more readable this
	  way.

2009-08-23  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: support for editing categories and creating categories with parents

2009-08-16  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Tasks are not due "tomorrow" anymore, but "soon", i.e. due in at most
	  n days, n being configurable in the settings bundle.

2009-08-09  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Add a toolbar to the task list, with an add button and a sync button.
	  Display the category name in the navigation bar.
	* misc: Ensure consistency between dates.

2009-08-08  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
    * misc: Display the day name when picking a date
	* misc: Fixed a number of small memory leaks, as well as a potential crash

2009-08-02  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: The user can now edit the categories associated with a task.


==== RELEASE 1.0 ====


2009-06-06  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>

	* misc: Use same font everywhere, with shadow.

	* TaskCellBig: Don't use italics.

	* misc: Fix some UI bugs when toggling editing mode

	* addtask.png: Change icon

	* Classes/TaskCell.m: Fix selection bug when confirming mark
	complete (2.2 specific).

	* TaskCell: fix overlapping views
